Fixed the no scroll bar bug on mobile.

--- a/siteresources/about.css
+++ b/siteresources/about.css
@@ -155,6 +155,8 @@
 										animation: push 2s;
 										width: 100%;
 										height: 100%;
+										overflow-x: hidden;
+										overflow-y: visible;
 									}
 				.gone {
 								position: fixed;
